2001-03-01  Darin Adler  <darin@eazel.com>

	reviewed by: John Sullivan <sullivan@eazel.com>

	Fix bug 7208 (History and Notes panels intermittently die at
	startup or window launch). The bug turned out to be a logic error
	at the shell level, not a panel crashing as I had been assuming.
	
	* src/nautilus-view-frame.c: (nautilus_view_frame_stop),
	(nautilus_view_frame_selection_changed),
	(nautilus_view_frame_title_changed), (send_history): Check whether
	the CORBA view object is NIL instead of looking at state. The view
	will be NIL at all the right times, and it's a simpler and more
	reliable check. In particular, it's correct during the early
	loading stage, when the state does not reflect whether the view is
	present yet or not.

	* libnautilus-extensions/nautilus-glib-extensions.c:
	(nautilus_g_hash_table_new_free_at_exit): Only complain on systems
	where NAUTILUS_DEBUG is set, because this could confuse real users
	(the message doesn't really represent a bug).

2001-03-01  Eric Fischer  <eric@eazel.com>

	reviewed by: Robin * Slomkowski <rslomkow@eazel.com>

	* nautilus.spec.in:
	Add dependency for libpng (fixed Bug 7162)
	Also change dependency for gnome-libs to 1.2.11, because
	Robin says anything built against that version (as on the
	build servers) will break if run with an older release.

2001-03-01  Eric Fischer  <eric@eazel.com>

	reviewed by: Laszlo Kovacs <laszlo.kovacs@sun.com>

	Fixes Bug 7128 (Organization of "Manual" in Help sidebar is bizarre)

	* components/help/hyperbola-filefmt.c:
	(fmt_man_populate_tree_for_dir):
	Put man pages in sections corresponding more closely to traditional
	Unix manual organization.

	(fmt_man_populate_tree):
	Add translate_array() and make_treesection() calls for the added
	manual sections.

2001-03-01  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	Fix bug 7155 - Nautilus dies trying to get bold font at startup if
	using Finish locale. 
	