@@ -1,3 +1,14 @@
+2001-03-01  Andy Hertzfeld  <andy@eazel.com>
+
+	fixed bug 7168, change name of first time druid flag so 1.0 users
+	will get to see the new options in the druid.
+
+	reviewed by: Michael Engber <engber@eazel.com>
+	
+	* src/nautilus-application.c: (need_to_show_first_time_druid):
+	* src/nautilus-first-time-druid.c:
+	(druid_set_first_time_file_flag):
+
 2001-03-01  Darin Adler  <darin@eazel.com>
 
 	reviewed by: John Sullivan <sullivan@eazel.com>
